<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Edit"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_edit_dark"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Text_Title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_TTS"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_tts_dark"
        android:text="@string/text_to_speech"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Edit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Copy"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_copy_dark"
        android:text="@string/copy_to_clipboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_TTS" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Share"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_share_dark"
        android:text="@string/share_this_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Copy" />


    <androidx.appcompat.widget.AppCompatButton
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_info_dark"
        android:id="@+id/Button_Info"
        android:text="@string/more_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Share" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Delete"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_delete_dark"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Text_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popup_padding"
        android:text="@string/block_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>