<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/View_Line"
        style="@style/BTN.Divider_Popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Upload" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Upload"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_cloud_upload_dark"
        android:text="@string/upload_to_cloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Text_Title" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_share_dark"
        android:id="@+id/Button_Share"
        android:text="@string/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Rename" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Rename"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_edit_dark"
        android:text="@string/rename"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/View_Line" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_info_dark"
        android:id="@+id/Button_Info"
        android:text="@string/more_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Share" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Delete"
        style="@style/BTN.TextView_Popup"
        android:drawableStart="@drawable/ic_delete_dark"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_Info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Text_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/popup_padding"
        android:text="@string/error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>