<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/Button_More"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/more"
        app:layout_constraintBottom_toBottomOf="@id/Button_Minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/Button_Plus"
        app:layout_constraintTop_toTopOf="@id/Button_Minus"
        app:srcCompat="@drawable/ic_more" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Edit_Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="numberDecimal|textNoSuggestions"
        android:text="@string/error"
        app:layout_constraintBottom_toBottomOf="@id/Button_Minus"
        app:layout_constraintStart_toEndOf="@id/Button_Minus"
        app:layout_constraintTop_toTopOf="@id/Button_Minus" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Edit_Block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="start|top"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_Minus" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/Button_Plus"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/Button_Minus"
        app:layout_constraintStart_toEndOf="@id/Text_Sp"
        app:layout_constraintTop_toTopOf="@id/Button_Minus"
        app:srcCompat="@drawable/ic_plus_dark" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/Button_Minus"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_minus" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Text_Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sp"
        app:layout_constraintBottom_toBottomOf="@id/Button_Minus"
        app:layout_constraintStart_toEndOf="@id/Edit_Size"
        app:layout_constraintTop_toTopOf="@id/Button_Minus" />
</androidx.constraintlayout.widget.ConstraintLayout>
